tests/ui/rfcs/rfc-0000-never_patterns/unreachable.exh_pats.stderr
error: unreachable pattern
  --> $DIR/unreachable.rs:17:9
   |
LL |         Err(!),
   |         ^^^^^^
   |
   = note: this pattern matches no values because `Void` is uninhabited
note: the lint level is defined here
  --> $DIR/unreachable.rs:7:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:20:19
   |
LL |     let (Ok(_x) | Err(!)) = res_void;
   |                   ^^^^^^
   |
   = note: this pattern matches no values because `Void` is uninhabited

error: unreachable pattern
  --> $DIR/unreachable.rs:22:12
   |
LL |     if let Err(!) = res_void {}
   |            ^^^^^^
   |
   = note: this pattern matches no values because `Void` is uninhabited

error: unreachable pattern
  --> $DIR/unreachable.rs:24:24
   |
LL |     if let (Ok(true) | Err(!)) = res_void {}
   |                        ^^^^^^
   |
   = note: this pattern matches no values because `Void` is uninhabited

error: unreachable pattern
  --> $DIR/unreachable.rs:26:23
   |
LL |     for (Ok(mut _x) | Err(!)) in [res_void] {}
   |                       ^^^^^^
   |
   = note: this pattern matches no values because `Void` is uninhabited

error: unreachable pattern
  --> $DIR/unreachable.rs:30:18
   |
LL | fn foo((Ok(_x) | Err(!)): Result<bool, Void>) {}
   |                  ^^^^^^
   |
   = note: this pattern matches no values because `Void` is uninhabited

error: aborting due to 6 previous errors

